--- a/EntryNow.Web/Pages/Entries/Index.razor
+++ b/EntryNow.Web/Pages/Entries/Index.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @*@page "/entries/index"*@
-@using BlazorPagination
 @attribute [Authorize]
 @inject EntryNow.Web.Services.Interface.IAccountService AccountService
 
@@ -53,37 +52,9 @@
     </tbody>
 </table>
 
-<BlazorPager CurrentPage="1"
-             PageCount="@_data.PageCount"
-             VisiblePages="3"
-             ShowFirstLast="true"
-             ShowPageNumbers="true"
-             FirstText="&laquo;"
-             LastText="&raquo;"
-             NextText="&rsaquo;"
-             PreviousText="&lsaquo;"
-             OnPageChanged="(async e => { page = e; await GetData();})">
-</BlazorPager>
-@*<BlazorPager CurrentPage="@_data.CurrentPage"
-             PageCount="@_data.PageCount"
-             VisiblePages="3"
-             ShowFirstLast="true"
-             ShowPageNumbers="true"
-             FirstText="&laquo;"
-             LastText="&raquo;"
-             NextText="&rsaquo;"
-             PreviousText="&lsaquo;"
-             OnPageChanged="(async e => { page = e; await GetData();})">
-</BlazorPager>*@
-
 @code {
-    private PagedResult<User> _data;
-    private int page = 1;
-    private int pageSize = 3;
-
     private bool loading;
     private IList<User> users;
-    private int numberOfRecords = 60;
 
     protected override async Task OnInitializedAsync()
     {
@@ -94,8 +65,31 @@
 
     private async Task GetData()
     {
-        //_data = await AccountService.GetAll(DateTimeOffset.UtcNow, page, pageSize);
         users = await AccountService.GetAll();
+
+        System.Net.Http.HttpClient client = new System.Net.Http.HttpClient();
+        client.BaseAddress = new Uri("https://entrynowapi.azurewebsites.net/api/");
+        // Add an Accept header for JSON format.
+        client.DefaultRequestHeaders.Accept.Clear();
+        client.DefaultRequestHeaders.Accept.Add(new System.Net.Http.Headers.MediaTypeWithQualityHeaderValue("application/json"));
+
+        string c = client.BaseAddress.AbsoluteUri;
+
+        try
+        {
+            System.Net.Http.HttpResponseMessage response = await client.GetAsync("https://entrynowapi.azurewebsites.net/api/voter/get?pageNumber=1&perPage=2");
+            //System.Net.Http.HttpResponseMessage response = client.GetAsync("voter/get?pageNumber=1&perPage=1000").Result;
+        }
+        catch(Exception eee)
+        {
+            
+        }
+        // List all Names.
+        
+
+
+        string a = "";
+
     }
 
     private async void DeleteUser(string id)
