--- a/EntryNow.Web/Pages/Index.razor
+++ b/EntryNow.Web/Pages/Index.razor
@@ -1,15 +1,4 @@
-﻿@*@page "/"
-@attribute [Authorize]
-@inject EntryNow.Web.Services.Interface.IAccountService AccountService
-
-<div class="p-4">
-    <div class="container">
-        <h1>Hi @AccountService.User.FirstName!</h1>
-        <p>You're logged in with Blazor WebAssembly!!</p>
-        <p><NavLink href="users">Manage Users</NavLink></p>
-    </div>
-</div>*@
-@page "/"
+﻿@page "/w"
 @attribute [Authorize]
 <h1>Hello!</h1>
 
