--- a/EntryNow.Web/Shared/MainLayout.razor
+++ b/EntryNow.Web/Shared/MainLayout.razor
@@ -14,6 +14,7 @@
         <NavLink href="account/logout" target="_blank" class="ml-md-auto">Logout</NavLink>
     </div>
     <div class="content px-4">
+        <Alert />
         @Body
     </div>
 </div>
