--- a/EntryNow.Web/Pages/Entries/Index.razor
+++ b/EntryNow.Web/Pages/Entries/Index.razor
@@ -7,7 +7,9 @@
 <NavLink href="entries/add" class="btn btn-sm btn-success mb-2">
     <span class="oi oi-plus" aria-hidden="true"></span>  New Entries
 </NavLink>
-<table class="table table-striped">
+<input class="form-control mb-4" id="searchInput" onkeyup="searchFunction()" type="text" placeholder="Search" style="width:20%; float: right;">
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-striped">
     <thead>
         <tr>
             <th style="width: 8%">Name</th>
@@ -69,6 +71,7 @@
         }
     </tbody>
 </table>
+</div>
 @if (totalPages > 0)
 {
     <nav aria-label="...">
@@ -118,7 +121,7 @@
 
 @code {
     private int page = 1;
-    private int pageSize = 5;
+    private int pageSize = 10;
     private bool loading;
     private IList<Entries> entries;
     private int totalPages;
