--- a/EntryNow.Web/Pages/Entries/Edit.razor
+++ b/EntryNow.Web/Pages/Entries/Edit.razor
@@ -1,9 +1,9 @@
-﻿@page "/entries/add"
+﻿@page "/entries/edit/{Id}"
 @attribute [Authorize]
 @inject EntryNow.Web.Services.Interface.IAlertService AlertService
 @inject NavigationManager NavigationManager
 
-<h1>New Entry</h1>
+<h3>Edit data for @model.Name</h3>
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator />
     @if (villages != null)
@@ -11,7 +11,7 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Name</label>
-                <InputText @bind-Value="model.Name" class="form-control" />
+                <InputText @bind-Value="model.Name" class="form-control" placeholder="@model.Name" />
                 <ValidationMessage For="@(() => model.Name)" />
             </div>
             <div class="form-group col">
@@ -152,12 +152,22 @@
     private bool loading;
     private bool pageLoading;
 
+    [Parameter]
+    public string Id { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         pageLoading = true;
+        await GetEntry();
         await FillDropDowns();
         pageLoading = false;
     }
+
+    private async Task GetEntry()
+    {
+        
+    }
+
     private async Task FillDropDowns()
     {
         try
@@ -226,6 +236,7 @@
             StateHasChanged();
         }
     }
+
     private async void OnValidSubmit()
     {
         AlertService.Clear();
@@ -233,7 +244,7 @@
         try
         {
             await AddEntryAsync();
-            AlertService.Success("New Entry Added Successfully", keepAfterRouteChange: true);
+            AlertService.Success("Entry Edited Successfully", keepAfterRouteChange: true);
             await Task.Delay(2000);
             NavigationManager.NavigateTo("entries/index");
         }
@@ -246,6 +257,7 @@
     }
     private async Task AddEntryAsync()
     {
+        //model.Id
         using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
         {
             var postData = Newtonsoft.Json.JsonConvert.SerializeObject(model);
