--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -26,7 +26,7 @@
           <!-- /.col -->
             <div class="card">
               <div class="card-header">
-                  <h3 class="card-title"><i class="fas fa-plus"></i>View the List of References</h3>
+                  <h3 class="card-title">View the List of References</h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body p-0">
@@ -37,14 +37,14 @@
                       <th>Surname</th>
                       <th>Contact</th>
                       <th>CNIC</th>
-                      <th>Reference</th>
+                      <th>Referenced By</th>
+                      <th>Recommended</th>
                       <th>UC</th>
                       <th>Taluka</th>
                       <th>Deh</th>
                       <th>Village</th>
                       <th>City</th>
                       <th>Address</th>
-                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -57,26 +57,14 @@
                                     <td>@entrie.Surname</td>
                                     <td>@entrie.ContactNumber</td>
                                     <td>@entrie.CNIC</td>
-                                    <td>@entrie.Reference</td>
+                                    <td>@entrie.ReferencedBy</td>
+                                    <td>@entrie.Recommended</td>
                                     <td>@entrie.UnionCounsil</td>
                                     <td>@entrie.Taluka</td>
                                     <td>@entrie.Deh</td>
                                     <td>@entrie.Village</td>
                                     <td>@entrie.City</td>
                                     <td>@entrie.Address</td>
-                                    <td style="white-space: nowrap">
-                                        <NavLink @onclick="@(() => EditBtn(entrie.Id))"><i class="far fa-edit"></i></NavLink>
-                                        <NavLink @onclick="@(() => DeleteBtn(entrie.Id))">
-                                            @if (IsDeleting)
-                                            {
-                                                <span class="spinner-border spinner-border-sm"></span>
-                                            }
-                                            else
-                                            {
-                                                <i class="far fa-trash-alt"></i>
-                                            }
-                                        </NavLink>
-                                    </td>
                                 </tr>
                             }
                         }
@@ -138,8 +126,7 @@
     private int page = 1;
     private int pageSize = 10;
     private bool loading;
-    private bool IsDeleting;
-    private IList<Entries> entries;
+    private IList<References> entries;
     private int totalPages;
     private readonly System.Net.Http.HttpClient _httpClient;
 
@@ -147,7 +134,7 @@
     {
         loading = true;
         await GetData();
-        await GetEntriesCount();
+        await GetReferencesCount();
         loading = false;
     }
 
@@ -181,10 +168,10 @@
         {
             using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
             {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/voter/get?pageNumber=" + page + "&perPage=" + pageSize))
+                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/reference/get?pageNumber=" + page + "&perPage=" + pageSize))
                 {
                     string apiResponse = await response.Content.ReadAsStringAsync();
-                    entries = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<Entries>>(apiResponse);
+                    entries = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<References>>(apiResponse);
                 }
             }
         }
@@ -196,13 +183,13 @@
         }
     }
 
-    private async Task GetEntriesCount()
+    private async Task GetReferencesCount()
     {
         try
         {
             using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
             {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/voter/get/count"))
+                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/reference/get/count"))
                 {
                     string apiResponse = await response.Content.ReadAsStringAsync();
                     totalPages = (int)Math.Ceiling((decimal)Int32.Parse(apiResponse) / (decimal)pageSize);
@@ -215,42 +202,5 @@
             loading = false;
             StateHasChanged();
         }
-    }
-
-    private void DeleteUser(string id)
-    {
-        //var user = users.First(x => x.Id == id);
-        //user.IsDeleting = true;
-        //await AccountService.Delete(id);
-        //users.Remove(user);
-        //StateHasChanged();
-    }
-
-    private void EditBtn(int id)
-    {
-        NavigationManager.NavigateTo($"entries/test/" + id);
-    }
-
-    private async Task DeleteBtn(int id)
-    {
-        IsDeleting = true;
-        try
-        {
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.DeleteAsync("https://entrynowapi.azurewebsites.net/api/voter/delete/" + id))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                }
-            }
-            await OnInitializedAsync();
-        }
-        catch(Exception e)
-        {
-            AlertService.Error("Not able to delete, Error : " + e.Message);
-            loading = false;
-            StateHasChanged();
-        }
-        IsDeleting = false;
     }
 }
