--- a/EntryNow.WebApp/Pages/Account/Layout.razor
+++ b/EntryNow.WebApp/Pages/Account/Layout.razor
@@ -3,7 +3,7 @@
 @inject IAccountService AccountService
 @inject NavigationManager NavigationManager
 
-<div class="col-md-6 offset-md-3 mt-5">
+<div class="login-box">
     @Body
 </div>
 
