--- a/EntryNow.WebApp/wwwroot/AdminLTE/plugins/datatables-searchbuilder/css/searchBuilder.bootstrap4.css
+++ b/EntryNow.WebApp/wwwroot/AdminLTE/plugins/datatables-searchbuilder/css/searchBuilder.bootstrap4.css
@@ -109,7 +109,7 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-condition {
   border-color: #28a745;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-data {
-  border-color: #dc3545;
+  border-color: #ff7380;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-value, div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria input.dtsb-value {
   border-color: #007bff;
