--- a/EntryNow.WebApp/Shared/EmptyLayout.razor
+++ b/EntryNow.WebApp/Shared/EmptyLayout.razor
@@ -1,8 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="main">
-    <div class="content px-4">
-        <Alert />
-        @Body
-    </div>
+<div class="hold-transition login-page">
+    <Alert />
+    @Body
 </div>
