--- a/EntryNow.WebApp/docs/css/app.css
+++ b/EntryNow.WebApp/docs/css/app.css
@@ -41,7 +41,7 @@
     width: 100%;
     margin-top: 0.25rem;
     font-size: 80%;
-    color: #dc3545;
+    color: #ff7380;
 }
 
 .invalid ~ .validation-message {
@@ -49,7 +49,7 @@
 }
 
 .form-control.invalid {
-    border-color: #dc3545;
+    border-color: #ff7380;
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
@@ -58,7 +58,7 @@
 }
 
 .form-control.invalid:focus {
-    border-color: #dc3545;
+    border-color: #ff7380;
     box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
 
@@ -68,7 +68,7 @@ textarea.form-control.invalid {
 }
 
 .form-check-input.invalid ~ .form-check-label {
-    color: #dc3545;
+    color: #ff7380;
 }
 
 .form-check-input.invalid ~ .validation-message {
