--- a/EntryNow.WebApp/wwwroot/AdminLTE/plugins/select2-bootstrap4-theme/select2-bootstrap4.css
+++ b/EntryNow.WebApp/wwwroot/AdminLTE/plugins/select2-bootstrap4-theme/select2-bootstrap4.css
@@ -60,7 +60,7 @@
 
 select.is-invalid ~ .select2-container--bootstrap4 .select2-selection,
 form.was-validated select:invalid ~ .select2-container--bootstrap4 .select2-selection {
-  border-color: #dc3545; }
+  border-color: #ff7380; }
 
 select.is-valid ~ .select2-container--bootstrap4 .select2-selection,
 form.was-validated select:valid ~ .select2-container--bootstrap4 .select2-selection {
