--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -29,8 +29,8 @@
                   <h3 class="card-title">View the List of References</h3>
               </div>
               <!-- /.card-header -->
-              <div class="card-body p-0">
-                <table class="table">
+              <div class="card-body table-responsive p-0">
+                <table class="table text-nowrap">
                   <thead>
                     <tr>
                       <th>Name</th>
@@ -84,14 +84,13 @@
             <!-- pagination -->
             @if (totalPages > 0)
             {
-                <div class="card-header">
-                <div class="card-tools">
-                  <ul class="pagination pagination-sm float-right">
-                        @if(page == 1)
+            <div class="card-footer clearfix">
+                    <ul class="pagination pagination-sm m-0 float-right">
+                        @if (page == 1)
                         {
                             <li class="page-item disabled"><a class="page-link" @onclick="GetDataOnPreviousPage">&laquo;</a></li>
                         }
-                        @if(page != 1)
+                        @if (page != 1)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>&laquo;</a></li>
                         }
@@ -103,17 +102,16 @@
                                 <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
                             }
                         }
-                        @if(page == totalPages)
+                        @if (page == totalPages)
                         {
                             <li class="page-item disabled"><a class="page-link" @onclick="GetDataOnNextPage">&raquo;</a></li>
                         }
-                        @if(page != totalPages)
+                        @if (page != totalPages)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>&raquo;</a></li>
                         }
-                  </ul>
-                </div>
-              </div>
+                    </ul>
+            </div>
             }
             </div>
             <!-- /.card -->
